--- a/sdPortfolio/views/index.ejs
+++ b/sdPortfolio/views/index.ejs
@@ -180,7 +180,7 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center">
                         <h2 class="title">About Me</h2>
-                        <p>Im a Enthusiastic Developer who likes to acquire new Skills frequently and Updating myself on the daily basis.</p>
+                        <p>Im an Enthusiastic Developer who likes to learn something new and help others with my skills.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -188,7 +188,7 @@
                 <div class="col-lg-6">
                     <div class="about-content mt-50">
                         <h5 class="about-title">Hi There! I'm Shivam Damre</h5>
-                        <p>I like to make Codes easily plyable for both person behind the screen as well as for developers. For me Software engineering is a never ending puzzle that Im passionately engaging in solving. I want to simplify everything in world by the help of coding.</p>
+                        <p>I like to make Codes easily plyable for both person behind the screen as well as for developers. For me Software engineering is a never ending puzzle that Im passionately engaging in solving. I will be really gratefull if I wil be able to help the world with my skills.</p>
                         <ul class="clearfix">
                             <li>
                                 <div class="single-info d-flex align-items-center">
@@ -226,7 +226,7 @@
                                         <i class="lni-map-marker"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Location:</span> 444607, sai nagar, Maharashtra</p>
+                                        <p><span>Location:</span> 444607, Sai nagar, Amravati, Maharashtra</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -240,14 +240,14 @@
                                 <h6 class="skill-title">Web Designing</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
-                                        <span class="counter">81</span>
+                                        <span class="counter">93</span>
                                     </div>
                                     %
                                 </div>
                             </div>
                             <div class="skill-bar">
                                 <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="81"></div>
+                                    <div class="bar progress-line" data-width="93"></div>
                                 </div>
                             </div>
                         </div> <!-- skill item -->
@@ -256,14 +256,14 @@
                                 <h6 class="skill-title">Frontend Development</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
-                                        <span class="counter">83</span>
+                                        <span class="counter">96</span>
                                     </div>
                                     %
                                 </div>
                             </div>
                             <div class="skill-bar">
                                 <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="83"></div>
+                                    <div class="bar progress-line" data-width="96"></div>
                                 </div>
                             </div>
                         </div> <!-- skill item -->
@@ -288,14 +288,14 @@
                                 <h6 class="skill-title">Website Management</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
-                                        <span class="counter">85</span>
+                                        <span class="counter">90</span>
                                     </div>
                                     %
                                 </div>
                             </div>
                             <div class="skill-bar">
                                 <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="85"></div>
+                                    <div class="bar progress-line" data-width="90"></div>
                                 </div>
                             </div>
                         </div> <!-- skill item -->
@@ -315,7 +315,7 @@
                 <div class="col-xl-8 col-lg-9">
                     <div class="call-action-content text-center">
                         <h2 class="action-title">Have any project on mind?</h2>
-                        <p>Feel free to contact me. By the way I dont charge for contacting me, it's free 😉!</p>
+                        <p>Feel free to contact me. By the way I don't charge for contacting me, it's free 😉!</p>
                         <ul>
                             <li><a class="main-btn custom" rel="nofollow" href="#contact">Contact Me</a></li>
                         </ul>
@@ -335,7 +335,7 @@
                 <div class="col-lg-8">
                     <div class="section-title pb-25">
                         <h2 class="title">My Recent Works</h2>
-                        <p><q>Empty brain is devil's Workshop</q> Yeh it's suit for me that's why I like to keep myself busy.</p>
+                        <p><q>Empty brain is devil's Workshop</q> that's why I like to keep myself busy.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -343,13 +343,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/work/w-1.png" alt="work">
+                            <img src="assets/images/work/w-1.jpg" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title">Campking</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-1.png"><i class="lni-plus"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/work/w-1.jpg"><i class="lni-plus"></i></a></li>
                                     <li><a href="/project1"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -359,13 +359,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/work/w-2.png" alt="work">
+                            <img src="assets/images/work/w-2.jpg" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title">ICA</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-2.png"><i class="lni-plus"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/work/w-2.jpg"><i class="lni-plus"></i></a></li>
                                     <li><a href="/project2"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -375,13 +375,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/work/w-3.png" alt="work">
+                            <img src="assets/images/work/w-3.jpg" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title">Blog site</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-3.png"><i class="lni-plus"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/work/w-3.jpg"><i class="lni-plus"></i></a></li>
                                     <li><a href="/project3"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -490,9 +490,6 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="footer-content text-center">
-                            <a href="/">
-                                <img src="assets/images/logo-2.png" alt="Logo">
-                            </a>
                             <ul>
                                 <li><a href="https://www.linkedin.com/in/shivam-damre-b84538170/"><i class="lni-linkedin-original"></i></a></li>
                                 <li><a href="https://github.com/shrinker03"><i class="lni-github-original"></i></a></li>
