--- a/sdPortfolio/views/portfolio-1.ejs
+++ b/sdPortfolio/views/portfolio-1.ejs
@@ -81,13 +81,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/images/pd-1_1.png" alt="First slide">
+                <img class="d-block w-100" src="assets/images/pd-1_1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd-1_2.png" alt="Second slide">
+                <img class="d-block w-100" src="assets/images/pd-1_2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd-1_3.png" alt="Third slide">
+                <img class="d-block w-100" src="assets/images/pd-1_3.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -105,20 +105,20 @@
             <ul>
               <li><strong>Category</strong>: Web app developement</li>
               <li><strong>Project date</strong>: 03 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://desolate-stream-08302.herokuapp.com/">https://desolate-stream-08302.herokuapp.com/</a></li>
-              <li><strong><i class="lni-github-original"></i></strong>: <a href="https://github.com/shrinker03/Yelp_camp">https://github.com/shrinker03/Yelp_camp</a></li>
+              <li><strong>Project URL</strong>: <a href="https://campworld.herokuapp.com/">https://campworld.herokuapp.com/</a></li>
+              <li><strong><i class="lni-github-original"></i></strong>: <a href="https://github.com/shrinker03/MENStack-Advanced-Project--Campworld">https://github.com/shrinker03/MENStack-Advanced-Project--Campworld</a></li>
             </ul>
           </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>Project name :- Campking</h2>
+          <h2>Project name :- Campworld</h2>
           <p>
-            <p><strong>DYNAMIC WEB APPLICATION -</strong>This project is one of my earlier projects the overview of this project was to give users an option to rent a campsite on the location user want to go for an adventure.</p>
+            <p><strong>DYNAMIC WEB APPLICATION -</strong>The overview of this project is to give users an option to rent a campsite on the location user want to go for an adventure.</p>
             <p><strong>Technical Info - </strong>
-             In this project I have use Nodejs as backend lang with express framework because of their never ending bond and large community it was quite easy to use this technology where as for authentication I have used passport tool with which authentication becomes super easy along with that I have used Cloudinary API for uploading images and Sendgrid API for sending E-mails and for frontend I have used Boostrap framework along with HTML,CSS and JS.</p>
-            <p><strong>The technology used -</strong> Nodejs, Express, MongoDB, Passport, Cloudinary and Sendgrid API, Bootstrap, Javascript, HTML, CSS. </p>
+             In this project I have used Nodejs and express as a backend server because of the scalability and large community. For authentication I have used Passportjs library with which authentication becomes super easy along with that I have used Cloudinary API for uploading images and Sendgrid API for sending E-mails and for frontend I have used Boostrap framework along with HTML, CSS and Javascript.</p>
+            <p style="margin-bottom: 20px;"><strong>The technology used -</strong> Nodejs, Express, MongoDB, Passport, Cloudinary and Sendgrid API, Bootstrap, Javascript, HTML, CSS. </p>
           </p>
         </div>
 
