--- a/sdPortfolio/views/index.ejs
+++ b/sdPortfolio/views/index.ejs
@@ -343,13 +343,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/work/w-1.jpg" alt="work">
+                            <img src="assets/images/work/w_1.jpg" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title">Campking</h3>
+                                <h3 class="work-title">CampWorld</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-1.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/work/w_1.jpg"><i class="lni-plus"></i></a></li>
                                     <li><a href="/project1"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -359,13 +359,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/work/w-2.jpg" alt="work">
+                            <img src="assets/images/work/w_2.jpg" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title">ICA</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-2.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/work/w_2.jpg"><i class="lni-plus"></i></a></li>
                                     <li><a href="/project2"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -375,13 +375,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/work/w-3.jpg" alt="work">
+                            <img src="assets/images/work/w_3.jpg" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title">Blog site</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-3.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/work/w_3.jpg"><i class="lni-plus"></i></a></li>
                                     <li><a href="/project3"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
