--- a/sdPortfolio/views/portfolio-1.ejs
+++ b/sdPortfolio/views/portfolio-1.ejs
@@ -81,13 +81,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/images/pd-1_1.jpg" alt="First slide">
+                <img class="d-block w-100" src="assets/images/pd_1_1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd-1_2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="assets/images/pd_1_2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd-1_3.jpg" alt="Third slide">
+                <img class="d-block w-100" src="assets/images/pd_1_3.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
