--- a/sdPortfolio/views/portfolio-2.ejs
+++ b/sdPortfolio/views/portfolio-2.ejs
@@ -81,13 +81,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/images/pd-21.png" alt="First slide">
+                <img class="d-block w-100" src="assets/images/pd_21.png" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd-22.png" alt="Second slide">
+                <img class="d-block w-100" src="assets/images/pd_22.png" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd-23.png" alt="Third slide">
+                <img class="d-block w-100" src="assets/images/pd_23.png" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -103,10 +103,10 @@
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Static Website Development</li>
+              <li><strong>Category</strong>: Website Design and Development</li>
               <li><strong>Project date</strong>: 18 Feb, 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://radiant-forest-66604.herokuapp.com/">https://radiant-forest-66604.herokuapp.com/</a></li>
-              <li><strong><i class="lni-github-original"></i></strong>: <a href="https://github.com/shrinker03">https://github.com/shrinker03</a></li>
+              <li><strong>Project URL</strong>: <a href="https://icleanamravati.herokuapp.com/">http://icleanamravati.herokuapp.com/</a></li>
+              <li><strong><i class="lni-github-original"></i></strong>: <a href="https://github.com/shrinker03/Freelance-work-Ngo_site">https://github.com/shrinker03/Freelance-work-Ngo_site</a></li>
             </ul>
           </div>
 
@@ -115,7 +115,7 @@
         <div class="portfolio-description">
           <h2>Project name :- ICA</h2>
           <p>
-            <p><strong>STATIC NGO WEBSITE -</strong>NGO SITE In this project the NGO wanted me to serve them a fully mobile responsive site with some dynamic features like working contact page.</p>
+            <p><strong>ICA NGO WEBSITE -</strong>NGO SITE In this project the NGO wanted me to serve them a fully mobile responsive site with some dynamic features like working contact page.</p>
             <p><strong>Technical Info -</strong> As the client wanted fully dynamic contact page so I decided to use Sendgrid API along with Backend technologies like Nodejs, Express and for the frontend I used HTML,CSS,JS and Bootstrap.</p> 
             <P><strong>The technology used - </strong>Bootstrap, Javascript, HTML, CSS </p>
           </p>
