--- a/sdPortfolio/views/portfolio-3.ejs
+++ b/sdPortfolio/views/portfolio-3.ejs
@@ -82,13 +82,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/images/pd-31.png" alt="First slide">
+                <img class="d-block w-100" src="assets/images/pd_31.png" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd-32.png" alt="Second slide">
+                <img class="d-block w-100" src="assets/images/pd_32.png" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd-33.png" alt="Third slide">
+                <img class="d-block w-100" src="assets/images/pd_33.png" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -106,8 +106,8 @@
             <ul>
               <li><strong>Category</strong>: Web app developement</li>
               <li><strong>Project date</strong>: 30 Feb, 2020</li>
-              <li><strong>Project URL</strong>: <a href="http://floating-badlands-88593.herokuapp.com/">http://floating-badlands-88593.herokuapp.com/</a></li>
-              <li><strong><i class="lni-github-original"></i></strong>: <a href="https://github.com/shrinker03">https://github.com/shrinker03</a></li>
+              <li><strong>Project URL</strong>: <a href="https://bloguniverse.herokuapp.com/blogs">https://bloguniverse.herokuapp.com/blogs</a></li>
+              <li><strong><i class="lni-github-original"></i></strong>: <a href="https://github.com/shrinker03/Blog_app-MEN-Stack-project">https://github.com/shrinker03/Blog_app-MEN-Stack-project</a></li>
             </ul>
           </div>
 
