--- a/sdPortfolio/views/portfolio-2.ejs
+++ b/sdPortfolio/views/portfolio-2.ejs
@@ -81,13 +81,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/images/pd_21.png" alt="First slide">
+                <img class="d-block w-100" src="assets/images/pd_21.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd_22.png" alt="Second slide">
+                <img class="d-block w-100" src="assets/images/pd_22.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd_23.png" alt="Third slide">
+                <img class="d-block w-100" src="assets/images/pd_23.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -115,10 +115,10 @@
         <div class="portfolio-description">
           <h2>Project name :- ICA</h2>
           <p>
-            <p><strong>ICA NGO WEBSITE -</strong>NGO SITE In this project the NGO wanted me to serve them a fully mobile responsive site with some dynamic features like working contact page.</p>
+            <p><strong>ICA NGO WEBSITE -</strong>This project is regarding the Icleanamravati(NGO) website. The Website is fully responsive and functional.</p>
             <p><strong>Technical Info -</strong> As the client wanted fully dynamic contact page so I decided to use Sendgrid API along with Backend technologies like Nodejs, Express and for the frontend I used HTML,CSS,JS and Bootstrap.</p> 
             <P><strong>The technology used - </strong>Bootstrap, Javascript, HTML, CSS </p>
-          </p>
+          </p style="margin-bottom: 20px;">
         </div>
 
       </div>
