--- a/sdPortfolio/views/portfolio-3.ejs
+++ b/sdPortfolio/views/portfolio-3.ejs
@@ -82,13 +82,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/images/pd_31.png" alt="First slide">
+                <img class="d-block w-100" src="assets/images/pd_31.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd_32.png" alt="Second slide">
+                <img class="d-block w-100" src="assets/images/pd_32.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/pd_33.png" alt="Third slide">
+                <img class="d-block w-100" src="assets/images/pd_33.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -116,10 +116,10 @@
         <div class="portfolio-description">
           <h2>Project name :- Blog Site</h2>
           <p>
-            <p><strong>DYNAMIC BLOG APP-</strong> This is the earliest project of my, the view of the project was to make a sober-looking but dynamic blog web app for the users. In this application I used CRUD so that the user can feel Something interactive. I was quite happy with this project since this is the earliest successfull app. I used HTML, CSS, Semantic-UI and Bootstrap as my frontend tools where as for Backend I have used NOdejs, Express, MongoDB and Passport for authentication.</p>
+            <p><strong>DYNAMIC BLOG APP-</strong> This is Simple Blog app where user can Login, Register, Create a Blog, Edit and Delete a Blog. I used HTML, CSS, Semantic-UI and Bootstrap as my frontend tools where as for Backend I have used NOdejs, Express, MongoDB and Passport for authentication.</p>
             <p><strong></strong></p>
             <p><strong>The technology used - </strong>Nodejs, Express, MongoDB, Passport, Bootstrap, Javascript, HTML, CSS, Semantic-UI.</p>
-          </p>
+          </p style="margin-bottom: 20px;">
         </div>
 
       </div>
