--- a/sdPortfolio/views/index.ejs
+++ b/sdPortfolio/views/index.ejs
@@ -375,6 +375,54 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
+                            <img src="assets/images/work/w_2.jpg" alt="work">
+                        </div>
+                        <div class="work-overlay">
+                            <div class="work-content">
+                                <h3 class="work-title">ICA</h3>
+                                <ul>
+                                    <li><a class="image-popup" href="assets/images/work/w_2.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a href="/project2"><i class="lni-link"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> <!-- single work -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-30">
+                        <div class="work-image">
+                            <img src="assets/images/work/w_2.jpg" alt="work">
+                        </div>
+                        <div class="work-overlay">
+                            <div class="work-content">
+                                <h3 class="work-title">ICA</h3>
+                                <ul>
+                                    <li><a class="image-popup" href="assets/images/work/w_2.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a href="/project2"><i class="lni-link"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> <!-- single work -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-30">
+                        <div class="work-image">
+                            <img src="assets/images/work/w_2.jpg" alt="work">
+                        </div>
+                        <div class="work-overlay">
+                            <div class="work-content">
+                                <h3 class="work-title">ICA</h3>
+                                <ul>
+                                    <li><a class="image-popup" href="assets/images/work/w_2.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a href="/project2"><i class="lni-link"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> <!-- single work -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-30">
+                        <div class="work-image">
                             <img src="assets/images/work/w_3.jpg" alt="work">
                         </div>
                         <div class="work-overlay">
