created: new project added

--- a/sdPortfolio/views/index.ejs
+++ b/sdPortfolio/views/index.ejs
@@ -140,7 +140,7 @@
                         <div class="header-content-right">
                             <h4 class="sub-title">Hello, I’m</h4>
                             <h1 class="title">Shivam Damre</h1>
-                            <p>A Full Stack Web Application Developer</p>
+                            <p>Full Stack Web Application Developer</p>
                             <a class="main-btn" href="#work">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
@@ -343,6 +343,54 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
+                            <img src="assets/images/work/pd_41.jpg" alt="work">
+                        </div>
+                        <div class="work-overlay">
+                            <div class="work-content">
+                                <h3 class="work-title">Gadgets Store</h3>
+                                <ul>
+                                    <li><a class="image-popup" href="assets/images/work/pd_41.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://gadgets-store-app.herokuapp.com/"><i class="lni-link"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> <!-- single work -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-30">
+                        <div class="work-image">
+                            <img src="assets/images/work/pd_42.jpg" alt="work">
+                        </div>
+                        <div class="work-overlay">
+                            <div class="work-content">
+                                <h3 class="work-title">Our Style</h3>
+                                <ul>
+                                    <li><a class="image-popup" href="assets/images/work/pd_42.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://our-style-live.herokuapp.com/"><i class="lni-link"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> <!-- single work -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-30">
+                        <div class="work-image">
+                            <img src="assets/images/work/pd_43.jpg" alt="work">
+                        </div>
+                        <div class="work-overlay">
+                            <div class="work-content">
+                                <h3 class="work-title">Color Factory</h3>
+                                <ul>
+                                    <li><a class="image-popup" href="assets/images/work/pd_43.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a href="/https://react-color-factory.vercel.app/"><i class="lni-link"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> <!-- single work -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-30">
+                        <div class="work-image">
                             <img src="assets/images/work/w_1.jpg" alt="work">
                         </div>
                         <div class="work-overlay">
@@ -351,54 +399,6 @@
                                 <ul>
                                     <li><a class="image-popup" href="assets/images/work/w_1.jpg"><i class="lni-plus"></i></a></li>
                                     <li><a href="/project1"><i class="lni-link"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div> <!-- single work -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-work text-center mt-30">
-                        <div class="work-image">
-                            <img src="assets/images/work/w_2.jpg" alt="work">
-                        </div>
-                        <div class="work-overlay">
-                            <div class="work-content">
-                                <h3 class="work-title">ICA</h3>
-                                <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w_2.jpg"><i class="lni-plus"></i></a></li>
-                                    <li><a href="/project2"><i class="lni-link"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div> <!-- single work -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-work text-center mt-30">
-                        <div class="work-image">
-                            <img src="assets/images/work/w_2.jpg" alt="work">
-                        </div>
-                        <div class="work-overlay">
-                            <div class="work-content">
-                                <h3 class="work-title">ICA</h3>
-                                <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w_2.jpg"><i class="lni-plus"></i></a></li>
-                                    <li><a href="/project2"><i class="lni-link"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div> <!-- single work -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-work text-center mt-30">
-                        <div class="work-image">
-                            <img src="assets/images/work/w_2.jpg" alt="work">
-                        </div>
-                        <div class="work-overlay">
-                            <div class="work-content">
-                                <h3 class="work-title">ICA</h3>
-                                <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w_2.jpg"><i class="lni-plus"></i></a></li>
-                                    <li><a href="/project2"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
                         </div>
