--- a/sdPortfolio/views/index.ejs
+++ b/sdPortfolio/views/index.ejs
@@ -359,13 +359,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/work/pd_44.jpg" alt="work">
+                            <img src="assets/images/work/pd_44.png" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title">Our Style</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/work/pd_44.jpg"><i class="lni-plus"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/work/pd_44.png"><i class="lni-plus"></i></a></li>
                                     <li><a href="https://our-style-live.herokuapp.com/"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
