prodjects dates removed

--- a/sdPortfolio/views/portfolio-1.ejs
+++ b/sdPortfolio/views/portfolio-1.ejs
@@ -103,8 +103,7 @@
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web app developement</li>
-              <li><strong>Project date</strong>: 03 March, 2020</li>
+              <li><strong>Category</strong>: Web Application Developement</li>
               <li><strong>Project URL</strong>: <a href="https://campworld.herokuapp.com/">https://campworld.herokuapp.com/</a></li>
               <li><strong><i class="lni-github-original"></i></strong>: <a href="https://github.com/shrinker03/MENStack-Advanced-Project--Campworld">https://github.com/shrinker03/MENStack-Advanced-Project--Campworld</a></li>
             </ul>
