--- a/sdPortfolio/views/portfolio-3.ejs
+++ b/sdPortfolio/views/portfolio-3.ejs
@@ -104,8 +104,7 @@
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web app developement</li>
-              <li><strong>Project date</strong>: 30 Feb, 2020</li>
+              <li><strong>Category</strong>: Web Application Developement</li>
               <li><strong>Project URL</strong>: <a href="https://bloguniverse.herokuapp.com/blogs">https://bloguniverse.herokuapp.com/blogs</a></li>
               <li><strong><i class="lni-github-original"></i></strong>: <a href="https://github.com/shrinker03/Blog_app-MEN-Stack-project">https://github.com/shrinker03/Blog_app-MEN-Stack-project</a></li>
             </ul>
